--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 @import url("../fontawesome/css/all.css");
-@import url("../fontawesome/scss/brands.scss");
-@import url("../fontawesome/scss/fontawesome.scss");
-@import url("../fontawesome/scss/solid.scss");
-@import url("../fontawesome/scss/regular.scss");
+@import url("../fontawesome/css/brands.css");
+@import url("../fontawesome/css/fontawesome.css");
+@import url("../fontawesome/css/solid.css");
+@import url("../fontawesome/css/regular.css");
 html {
   width: 100%;
   line-height: 1.15; /* 1 */
@@ -311,6 +311,10 @@ hr {
 
 @font-face {
   font-family: "Roboto";
+  src: url("../fonts/roboto/Roboto-Black.eot") format("embedded-opentype");
+  src: url("../fonts/roboto/Roboto-Black.ttf") format("truetype");
+  src: url("../fonts/roboto/Roboto-Black.woff") format("woff");
+  src: url("../fonts/roboto/Roboto-Black.woff2") format("woff2");
   src: url("../fonts/roboto/Roboto-Regular.eot") format("embedded-opentype");
   src: url("../fonts/roboto/Roboto-Regular.ttf") format("truetype");
   src: url("../fonts/roboto/Roboto-Regular.woff") format("woff");
@@ -319,6 +323,7 @@ hr {
 }
 @font-face {
   font-family: "Heebo";
+  src: url("../fonts/heebo/Heebo-Black.ttf") format("truetype");
   src: url("../fonts/heebo/Heebo-Regular.eot") format("embedded-opentype");
   src: url("../fonts/heebo/Heebo-Regular.ttf") format("truetype");
   src: url("../fonts/heebo/Heebo-Regular.woff") format("woff");
