--- a/css/Settings/_settings.font.css
+++ b/css/Settings/_settings.font.css
@@ -1,10 +1,14 @@
 @import url("../fontawesome/css/all.css");
-@import url("../fontawesome/scss/brands.scss");
-@import url("../fontawesome/scss/fontawesome.scss");
-@import url("../fontawesome/scss/solid.scss");
-@import url("../fontawesome/scss/regular.scss");
+@import url("../fontawesome/css/brands.css");
+@import url("../fontawesome/css/fontawesome.css");
+@import url("../fontawesome/css/solid.css");
+@import url("../fontawesome/css/regular.css");
 @font-face {
   font-family: 'Roboto';
+  src: url("../fonts/roboto/Roboto-Black.eot") format("embedded-opentype");
+  src: url("../fonts/roboto/Roboto-Black.ttf") format("truetype");
+  src: url("../fonts/roboto/Roboto-Black.woff") format("woff");
+  src: url("../fonts/roboto/Roboto-Black.woff2") format("woff2");
   src: url("../fonts/roboto/Roboto-Regular.eot") format("embedded-opentype");
   src: url("../fonts/roboto/Roboto-Regular.ttf") format("truetype");
   src: url("../fonts/roboto/Roboto-Regular.woff") format("woff");
@@ -14,6 +18,7 @@
 
 @font-face {
   font-family: 'Heebo';
+  src: url("../fonts/heebo/Heebo-Black.ttf") format("truetype");
   src: url("../fonts/heebo/Heebo-Regular.eot") format("embedded-opentype");
   src: url("../fonts/heebo/Heebo-Regular.ttf") format("truetype");
   src: url("../fonts/heebo/Heebo-Regular.woff") format("woff");
