--- a/css/Elements/_elements.body.css
+++ b/css/Elements/_elements.body.css
@@ -8,3 +8,10 @@ body {
   background-color: rgba(192, 225, 240, 0.35) !important;
   padding: 0 !important;
 }
+
+body hr {
+  min-width: 500px;
+  height: 1px !important;
+  margin-right: auto !important;
+  background: linear-gradient(2deg, #5b6268 35%, #d5f8ff 100%);
+}
