--- a/css/Elements/_elements.header.css
+++ b/css/Elements/_elements.header.css
@@ -8,8 +8,23 @@
   background: linear-gradient(2deg, #3e93ff 60%, #d5f8ff 100%);
 }
 
-.header-container-ul {
-  width: 15%;
+.header-container > .nav-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header-container > .nav-container > .fa-bars {
+  cursor: pointer;
+  font-size: 24px;
+  visibility: hidden;
+  opacity: 0;
+  color: whitesmoke;
+}
+
+.header-container > .nav-container > .unordered-list {
+  width: 200px;
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
@@ -20,7 +35,7 @@
   padding-left: 0 !important;
 }
 
-.header-container-li {
+.header-container > .nav-container .list-item {
   height: 2rem;
   display: flex;
   flex-direction: row;
@@ -29,7 +44,7 @@
   align-items: center;
 }
 
-.header-container-ancher {
+.header-container > .nav-container .link {
   cursor: pointer;
   text-decoration: none !important;
   color: whitesmoke !important;
@@ -37,7 +52,7 @@
   transition: all 0.5s;
 }
 
-.header-container-ancher:hover {
+.header-container > .nav-container .link:hover {
   border-color: whitesmoke;
 }
 
