--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,7 +16,6 @@
 @import './Elements/_elements.button';
 @import './Elements/_elements.footer';
 
-
 @import './Objects/_objects.description-numbers';
 
 @import './Components/_components.code-container';
@@ -24,6 +23,7 @@
 @import './Components/_components.fibonacci';
 @import './Components/_components.table';
 @import './Components/_components.figures-form';
+@import './Components/_components.currency';
 
 
 
